--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -1655,13 +1655,6 @@
 .filtered-by {
     margin: 0;
 
-    &__show-on-medium {
-        display: none;
-        .respond-to-min(600px, {
-            display: block;
-        });
-    }
-
     &_header {
         .h5();
         margin: 0;
@@ -1675,6 +1668,11 @@
     &_filter {
         .webfont-regular();
         color: @gray;
+
+        .respond-to-print({
+            .webfont-demi();
+            color: @black;
+        });
     }
 }
 
