--- a/static/css/main.css
+++ b/static/css/main.css
@@ -16805,6 +16805,20 @@ a.focus .summary_header {
 .print-bar {
   display: block;
   width: 100%;
-  height: 5px;
-  background: #101820;
+  height: 0;
+  border-top: 5px solid #101820;
+}
+@media print {
+  .print-bar {
+    display: block;
+    width: 100%;
+    height: 0;
+    border-top: 5px solid #101820;
+  }
+}
+.print  .print-bar {
+  display: block;
+  width: 100%;
+  height: 0;
+  border-top: 5px solid #101820;
 }
