--- a/static/css/main.css
+++ b/static/css/main.css
@@ -16806,5 +16806,6 @@ a.focus .summary_header {
   display: block;
   width: 100%;
   height: 0;
+  margin: 1.875em 0;
   border-top: 5px solid #101820;
 }
