--- a/static/css/print.less
+++ b/static/css/print.less
@@ -46,6 +46,7 @@
     display: block;
     width: 100%;
     height: 0;
+    margin: unit(30px / @base-font-size-px, em) 0;
     border-top: 5px solid @black;
 }
 
