--- a/static/css/main.css
+++ b/static/css/main.css
@@ -16791,21 +16791,21 @@ a.focus .summary_header {
     - cfgov-print
 */
 /* topdoc
-  name: Print bar
+  name: Print header
   notes:
-    - "A simple black bar."
+    - "Separates print header stuff from the rest of the page content."
   family: cfgov-print
   patterns:
-    - name: .print-bar
+    - name: .print-header
       markup: |
-        <div class="print-bar"></div>
+        <div class="print-header">
+            There should be a line underneath me =D
+        </div>
   tags:
     - cfgov-print
 */
-.print-bar {
-  display: block;
-  width: 100%;
-  height: 0;
-  margin: 1.875em 0;
-  border-top: 5px solid #101820;
+.print-header {
+  margin-bottom: 1.875em;
+  padding-bottom: 1.875em;
+  border-bottom: 5px solid #101820;
 }
