--- a/static/css/print.less
+++ b/static/css/print.less
@@ -30,23 +30,23 @@
 
 
 /* topdoc
-  name: Print bar
+  name: Print header
   notes:
-    - "A simple black bar."
+    - "Separates print header stuff from the rest of the page content."
   family: cfgov-print
   patterns:
-    - name: .print-bar
+    - name: .print-header
       markup: |
-        <div class="print-bar"></div>
+        <div class="print-header">
+            There should be a line underneath me =D
+        </div>
   tags:
     - cfgov-print
 */
 
-.print-bar {
-    display: block;
-    width: 100%;
-    height: 0;
-    margin: unit(30px / @base-font-size-px, em) 0;
-    border-top: 5px solid @black;
+.print-header {
+    margin-bottom: unit(30px / @base-font-size-px, em);
+    padding-bottom: unit(30px / @base-font-size-px, em);
+    border-bottom: 5px solid @black;
 }
 
