--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10267,9 +10267,6 @@ a.category-slug.active {
   margin-right: 1px;
   margin-left: 1px;
 }
-.icon-link__before:after {
-  content: '' !important;
-}
 .icon-link__download:after,
 .icon-link__download.icon-link__before:before {
   content: "\e406";
@@ -10301,6 +10298,9 @@ a.category-slug.active {
 .icon-link__right:after,
 .icon-link__right.icon-link__before:before {
   content: "\e002";
+}
+.icon-link__before:after {
+  content: '';
 }
 .icon-link__no-wrap {
   white-space: nowrap;
@@ -10406,9 +10406,6 @@ a.category-slug.active {
   margin-right: 1px;
   margin-left: 1px;
 }
-.jump-link__before:after {
-  content: '' !important;
-}
 .jump-link__download:after,
 .jump-link__download.icon-link__before:before {
   content: "\e406";
@@ -10440,6 +10437,9 @@ a.category-slug.active {
 .jump-link__right:after,
 .jump-link__right.icon-link__before:before {
   content: "\e002";
+}
+.jump-link__before:after {
+  content: '';
 }
 .jump-link__no-wrap {
   white-space: nowrap;
