Some slight icon-link icon output refactoring

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -10915,19 +10915,18 @@ a.category-slug.active {
            to a jump link is to add a modifier with the icon's name."
     - name: .jump-link__before (modifier)
       markup: |
-        <a class="jump-link jump-link__left icon-link__before" href="#">
+        <a class="jump-link jump-link__left jump-link__before" href="#">
             <span class="jump-link_text">Jump link with icon on left</span>
         </a>
       codenotes:
-        - .jump-link__<icon>.icon-link__before
+        - .jump-link__<icon>.jump-link__before
       notes:
-        - "Jump links can also have icons before the text, like icon links.
-           Just make sure you add the .icon-link__before class, not
-           .jump-link__before."
+        - "Jump links can also have icons before the text, like icon links."
     - name: .jump-link__bg (modifier)
       markup: |
         <a class="jump-link jump-link__bg" href="#">
-            <span class="jump-link_text">Jump link with grey background and solid borders on small screens</span>
+            <span class="jump-link_text">Jump link with grey background and
+                solid borders on small screens</span>
         </a>
       codenotes:
         - .jump-link__bg
@@ -10966,42 +10965,42 @@ a.category-slug.active {
 }
 
 .jump-link__download:after,
-.jump-link__download.icon-link__before:before {
+.jump-link__download.jump-link__before:before {
   content: "\e406";
 }
 
 .jump-link__email:after,
-.jump-link__email.icon-link__before:before {
+.jump-link__email.jump-link__before:before {
   content: "\e302";
 }
 
 .jump-link__external-link:after,
-.jump-link__external-link.icon-link__before:before {
+.jump-link__external-link.jump-link__before:before {
   content: "\e610";
 }
 
 .jump-link__fax:after,
-.jump-link__fax.icon-link__before:before {
+.jump-link__fax.jump-link__before:before {
   content: "\e310";
 }
 
 .jump-link__left:after,
-.jump-link__left.icon-link__before:before {
+.jump-link__left.jump-link__before:before {
   content: "\e000";
 }
 
 .jump-link__mail:after,
-.jump-link__mail.icon-link__before:before {
+.jump-link__mail.jump-link__before:before {
   content: "\e304";
 }
 
 .jump-link__phone:after,
-.jump-link__phone.icon-link__before:before {
+.jump-link__phone.jump-link__before:before {
   content: "\e306";
 }
 
 .jump-link__right:after,
-.jump-link__right.icon-link__before:before {
+.jump-link__right.jump-link__before:before {
   content: "\e002";
 }
 
