Fixes share_twitter_url error on blog pages.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -134,7 +134,7 @@
     =================
 -->
 
-{% block body %}
+{% block body scoped %}
 
 <div class="beta-banner expandable" id="beta-banner">
     <div class="wrapper wrapper__match-content">
