--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -1,4 +1,6 @@
 
+{% import "macros.html" as macros %}
+
 <article class="post">
     <header>
         {% if post.category.0 %}
@@ -34,36 +36,7 @@
                 {{ post.date|date("%b %d, %Y") }}
             </span>
         </div>
-        <ul class="post_share list__horizontal">
-            <li class="list_item">
-                <a class="share-icon"
-                   href="http://api.addthis.com/oexchange/0.8/forward/email/offer?url={{ request.url|urlencode }}&amp;title={{ post.title }}&amp;pubid=ra-4da354ee346886d2">
-                    <span class="cf-icon cf-icon-email-social-square"></span>
-                    <span class="u-visually-hidden">Share by email</span>
-                </a>
-            </li>
-            <li class="list_item">
-                <a class="share-icon"
-                   href="https://www.facebook.com/dialog/share?app_id=210516218981921&amp;display=page&amp;href={{ request.url|urlencode }}&amp;redirect_uri={{ request.url|urlencode }}">
-                    <span class="cf-icon cf-icon-facebook-square"></span>
-                    <span class="u-visually-hidden">Share on Facebook</span>
-                </a>
-            </li>
-            <li class="list_item">
-                <a class="share-icon"
-                   href="{{ share_twitter_url() }}"
-                   target="_blank">
-                    <span class="cf-icon cf-icon-twitter-square"></span>
-                    <span class="u-visually-hidden">Share on Twitter</span>
-                </a>
-            </li>
-            <!-- <li class="list_item">
-                <a class="share-icon" href="#">
-                    <span class="cf-icon cf-icon-linkedin-square"></span>
-                    <span class="u-visually-hidden">Share on LinkedIn</span>
-                </a>
-            </li> -->
-        </ul>
+        {{ macros.share(self.title(), false) }}
     {% if post.thumbnail.images %}
         <img class="post_featured-img"
              src="{{ post.thumbnail.images.full.url }}"
