Makes .list__spaced play nice with .list__links.

--- a/static/css/lists.less
+++ b/static/css/lists.less
@@ -278,6 +278,10 @@
         });
     }
 
+    &.list__spaced .list_item + .list_item {
+        margin-top: 0;
+    }
+
     .list_link {
         .respond-to-max(599px, {
             .block-link();
