--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12166,6 +12166,9 @@ a.category-slug.active {
     margin-bottom: -1px;
   }
 }
+.list__links.list__spaced .list_item + .list_item {
+  margin-top: 0;
+}
 @media only all and (max-width: 37.4375em) {
   .list__links .list_link {
     -webkit-box-sizing: border-box;
@@ -15783,6 +15786,9 @@ a.focus .summary_header {
     margin-bottom: -1px;
   }
 }
+.footer_nav-list.list__spaced .list_item + .list_item {
+  margin-top: 0;
+}
 @media only all and (max-width: 37.4375em) {
   .footer_nav-list .list_link {
     -webkit-box-sizing: border-box;
@@ -16056,6 +16062,9 @@ a.focus .summary_header {
   .footer_list .list_item {
     margin-bottom: -1px;
   }
+}
+.footer_list.list__spaced .list_item + .list_item {
+  margin-top: 0;
 }
 @media only all and (max-width: 37.4375em) {
   .footer_list .list_link {
