Updated styles for activity.

--- a/static/css/main.less
+++ b/static/css/main.less
@@ -107,4 +107,5 @@
 @import (less) "history.less";
 @import (less) "footer.less";
 @import (less) "beta.less";
+@import (less) "activity.less";
 @import (less) "print.less";
