--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10189,79 +10189,6 @@ a.category-slug.active {
    misc
    ========================================================================== */
 /* topdoc
-  name: Activity
-  family: cfgov-misc
-  notes:
-    - "A list of recent document type post titles with a document type header."
-  patterns:
-    - name: Activity
-      markup: |
-        <aside class="activity">
-            <h1 class="h4">
-                <span class="cf-icon cf-icon-speech-bubble"></span>
-                Blog
-            </h1>
-            <ul class="list list__unstyled list__spaced">
-                <li class="list_item">
-                    <a class="list_link" href="#">
-                        Consumer advisory: Co-signers can cause surprise defaults
-                        on your private student loans
-                    </a>
-                </li>
-                <li class="list_item">
-                    <a class="list_link" href="#">
-                        Explainer: Federal student loan interest rates to jump
-                    </a>
-                </li>
-            </ul>
-        </aside>
-      codenotes:
-        - |
-          Structural cheat sheet:
-          -----------------------
-          aside.activity
-            h1.h4
-              .cf-icon
-            ul.list.list__unstyled.list__spaced
-              li.list_item
-                a.list_link
-  tags:
-    - cfgov-misc
-*/
-.activity {
-  margin-bottom: 1.875em;
-}
-@media only all and (min-width: 37.5em) {
-  .activity .list_link {
-    color: #101820;
-    border-color: #101820;
-    border-bottom-width: 0 !important;
-  }
-  .activity .list_link:after {
-    content: '';
-  }
-  .activity .list_link:visited,
-  .activity .list_link.visited {
-    border-color: #101820;
-    color: #101820;
-  }
-  .activity .list_link:hover,
-  .activity .list_link.hover {
-    border-color: #328ed8;
-    color: #328ed8;
-  }
-  .activity .list_link:focus,
-  .activity .list_link.focus {
-    border-color: #328ed8;
-    color: #328ed8;
-  }
-  .activity .list_link:active,
-  .activity .list_link.active {
-    border-color: #101820;
-    color: #101820;
-  }
-}
-/* topdoc
   name: Links with icons
   family: cfgov-misc
   notes:
@@ -17033,6 +16960,111 @@ a.focus .summary_header {
     top: 39px;
   }
 }
+/* ==========================================================================
+   cfgov-refresh
+   activity
+   ========================================================================== */
+/* topdoc
+  name: Activity
+  family: cfgov-activity
+  notes:
+    - "A list of recent document type post titles with a document type header."
+  patterns:
+    - name: Activity
+      markup: |
+        <aside class="activity">
+            <h1 class="h4">
+                <span class="cf-icon cf-icon-speech-bubble"></span>
+                Blog
+            </h1>
+            <ul class="list list__unstyled list__spaced">
+                <li class="list_item">
+                    <a class="list_link" href="#">
+                        Consumer advisory: Co-signers can cause surprise defaults
+                        on your private student loans
+                    </a>
+                </li>
+                <li class="list_item">
+                    <a class="list_link" href="#">
+                        Explainer: Federal student loan interest rates to jump
+                    </a>
+                </li>
+            </ul>
+        </aside>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          aside.activity
+            h1.h4
+              .cf-icon
+            ul.list.list__unstyled.list__spaced
+              li.list_item
+                a.list_link
+  tags:
+    - cfgov-activity
+*/
+.activity {
+  margin-bottom: 1.875em;
+}
+.activity .list_link {
+  color: #101820;
+  border-color: #101820;
+}
+.activity .list_link:visited,
+.activity .list_link.visited {
+  border-color: #101820;
+  color: #101820;
+}
+.activity .list_link:hover,
+.activity .list_link.hover {
+  border-color: #328ed8;
+  color: #328ed8;
+}
+.activity .list_link:focus,
+.activity .list_link.focus {
+  border-color: #328ed8;
+  color: #328ed8;
+}
+.activity .list_link:active,
+.activity .list_link.active {
+  border-color: #101820;
+  color: #101820;
+}
+@media only all and (min-width: 37.5em) {
+  .activity .list_link:after {
+    content: '';
+  }
+  .activity .list_link {
+    color: #101820;
+    border-color: #101820;
+    border-bottom-width: 0 !important;
+  }
+  .activity .list_link:visited,
+  .activity .list_link.visited {
+    border-color: #101820;
+    color: #101820;
+  }
+  .activity .list_link:hover,
+  .activity .list_link.hover {
+    border-color: #328ed8;
+    color: #328ed8;
+  }
+  .activity .list_link:focus,
+  .activity .list_link.focus {
+    border-color: #328ed8;
+    color: #328ed8;
+  }
+  .activity .list_link:active,
+  .activity .list_link.active {
+    border-color: #101820;
+    color: #101820;
+  }
+}
+/* topdoc
+  name: EOF
+  eof: true
+*/
 /* ==========================================================================
    cfgov-refresh
    Print
