--- a/static/css/main.less
+++ b/static/css/main.less
@@ -73,10 +73,54 @@
     }
 }
 
-// @import combined CF component Less and make any overrides
+
+/* Base styles
+   @import combined CF component Less and make any overrides
+   ========================================================================== */
+
 @import (less) "../../vendor/cf-concat/cf.less";
 @cf-icon-path: "/static/fonts";
 @grid_box-sizing-polyfill-path: "/cfgov-refresh/static/vendor/box-sizing-polyfill";
+@import (less) "cf-enhancements.less";
+
+
+/* Base patterns
+   ========================================================================== */
+
+@import (less) "forms.less";
+@import (less) "lists.less";
+@import (less) "media.less";
+@import (less) "media-object.less";
+@import (less) "meta.less";
+@import (less) "misc.less";
+@import (less) "summary.less";
+
+
+/* Amalgamated patterns
+   ========================================================================== */
+
+@import (less) "activity.less";
+@import (less) "blog-docs.less";
+@import (less) "post.less";
+
+
+/* Template pieces
+   ========================================================================== */
+
+@import (less) "nav-secondary.less";
+@import (less) "header.less";
+@import (less) "footer.less";
+
+
+/* Page-specific styles
+   ========================================================================== */
+
+@import (less) "beta.less";
+@import (less) "bureau.less";
+@import (less) "bureau-structure.less";
+@import (less) "contact-us.less";
+@import (less) "history.less";
+@import (less) "press-resources.less";
 
 
 /* Demo-specific styles
@@ -85,27 +129,7 @@
 @import (less) "demo.less";
 
 
-/* Project-specific styles
+/* Print styles
    ========================================================================== */
 
-@import (less) "cf-enhancements.less";
-@import (less) "header.less";
-@import (less) "nav-secondary.less";
-@import (less) "media-object.less";
-@import (less) "meta.less";
-@import (less) "misc.less";
-@import (less) "forms.less";
-@import (less) "lists.less";
-@import (less) "post.less";
-@import (less) "summary.less";
-@import (less) "blog-docs.less";
-@import (less) "press-resources.less";
-@import (less) "contact-us.less";
-@import (less) "bureau.less";
-@import (less) "bureau-structure.less";
-@import (less) "media.less";
-@import (less) "history.less";
-@import (less) "footer.less";
-@import (less) "beta.less";
-@import (less) "activity.less";
 @import (less) "print.less";
