Fixes list__links in footer.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -180,12 +180,12 @@
                         <div class="footer_general-inqueries">
                             <b class="footer_general-inqueries-label">For general inquiries only</b>
                             <ul class="list list__links">
-                                <li>
+                                <li class="list_item">
                                     <a class="list_link footer_general-inqueries-phone" href="tel:202-435-7000">
                                         (202) 435-7000
                                     </a>
                                 </li>
-                                <li>
+                                <li class="list_item">
                                     <a class="list_link" href="mailto:info@consumerfinance.gov">
                                         info@consumerfinance.gov
                                     </a>
